philz-cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philz-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: philz-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: philz-api
    spec:
      containers:
      - name: philz-api
        image: marymarkart/philz-api:v2.0
        ports:
        - containerPort: 8080
